--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="forget_password">Đặt lại mật khẩu?</string>
     <string name="reset_passowrd">Đặt lại mất khẩu</string>
     <string name="check_password">Mật khẩu (ít nhất 6 kí tự)</string>
+    <string name="now_playing">Bài hát đang phát</string>
+    <string name="song_name">Tên bài bát</string>
+    <string name="artist_name">Tên nghệ sĩ</string>
 </resources>
