--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="now_playing">Bài hát đang phát</string>
     <string name="song_name">Tên bài hát</string>
     <string name="singer_name">Tên ca sĩ</string>
+    <string name="music_for_you">Bài hát đã tải</string>
 </resources>
