--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="song_name">Tên bài hát</string>
     <string name="singer_name">Tên ca sĩ</string>
     <string name="music_for_you">Bài hát đã tải</string>
+    <string name="text_search">Nhập từ khóa tìm kiếm</string>
+    <string name="search">Tìm kiếm</string>
 </resources>
